# teensy3-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  teensy3  thumbv7em-none-eabi.json
.cargo/: config
src/: lib.rs  main.rs  serial.rs
teensy3/: Cargo.toml  Makefile  Wire.h  mk20dx256.ld
teensy3-sys/: Cargo.toml  bindings.h  bindings.rs  build.rs  lib.rs
teensy3-sys/teensy3-core/: Makefile  SPI.h  WMath.cpp  WProgram.h  Wire.cpp  keylayouts.h  mk20dx256.ld
teensy3/src/: lib.rs  pins.rs  serial.rs  spi.rs  util.rs
