[package]
name = "teensy3-sys"
version = "0.2.0"
authors = ["Alpi Tolvanen <alpi.tolvanen@tutanota.com>", "Paul Stoffregen <paul@pjrc.com>", "Simon Sapin <simon.sapin@exyr.org>", "James Munns <james.munns@gmail.com>"]
description = "Servo Bindgen generated bindings, and Teensyduino ASM/C/CPP/Linker components"
license = "MIT/LGPL-2.1"
repository = "https://github.com/jamesmunns/teensy3-rs"

build = "build.rs"

[lib]
path = "lib.rs"

[features]
teensy_3_0 = []
teensy_3_1 = []
teensy_3_2 = []
teensy_3_5 = []
teensy_3_6 = []

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0.61"

