[package]
name = "teensy3-sys"
version = "0.2.0"
authors = ["Alpi Tolvanen <alpi.tolvanen@tutanota.com>", "Paul Stoffregen <paul@pjrc.com>", "Simon Sapin <simon.sapin@exyr.org>", "James Munns <james.munns@gmail.com>"]
description = "Servo Bindgen generated bindings, and Teensyduino ASM/C/CPP/Linker components"
license = "MIT/LGPL-2.1"
repository = "https://github.com/jamesmunns/teensy3-rs"

build = "build.rs"

[lib]
path = "lib.rs"

[features]
# Choose only one of following
teensy_3_0 = []
teensy_3_1 = []
teensy_3_2 = []
teensy_3_5 = []
teensy_3_6 = []
# You may choose only one of following (usb_serial is default)
usb_serial = []      # tested
usb_serial_hid = []  # tested, but everything below is not tested
usb_dual_serial = []
usb_triple_serial = []
usb_keyboardonly = []
usb_hid = []
usb_touchscreen = []
usb_hid_touchscreen = []
usb_midi = []
usb_midi4 = []
usb_midi16 = []
usb_midi_serial = []
usb_midi4_serial = []
usb_midi16_serial = []
usb_rawhid = []
usb_flightsim = []
usb_flightsim_joystick = []
usb_mtpdisk = []
usb_audio = []
usb_midi_audio_serial = []
usb_midi16_audio_serial = []
usb_everything = []

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0.61"

